{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 128,
  "lineage": "7d5ede0a-5f11-2c2a-0cc6-327f0787891e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "omega_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rec_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:internet-gateway/igw-0fe19033532a878aa",
            "id": "igw-0fe19033532a878aa",
            "owner_id": "552239912540",
            "tags": {
              "Name": "gateway_recette"
            },
            "tags_all": {
              "Name": "gateway_recette"
            },
            "vpc_id": "vpc-06bc46b854a43b1a8"
          },
          "dependencies": [
            "aws_vpc.vpc_rec"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "omega_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:route-table/rtb-092de91ff9e4e2209",
            "id": "rtb-092de91ff9e4e2209",
            "owner_id": "552239912540",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06bc46b854a43b1a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_rec"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "omega_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:route-table/rtb-01549c9ff6889781f",
            "id": "rtb-01549c9ff6889781f",
            "owner_id": "552239912540",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe19033532a878aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06bc46b854a43b1a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.rec_igw",
            "aws_vpc.vpc_rec"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09887f7d90634801a",
            "route_table_id": "rtb-092de91ff9e4e2209",
            "subnet_id": "subnet-07ee617325ff253d0"
          },
          "dependencies": [
            "aws_route_table.omega_private_rt",
            "aws_subnet.omega_private_subnet",
            "aws_vpc.vpc_rec",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05274ddbe50f6fca1",
            "route_table_id": "rtb-092de91ff9e4e2209",
            "subnet_id": "subnet-0e93b0ac86b06b6f8"
          },
          "dependencies": [
            "aws_route_table.omega_private_rt",
            "aws_subnet.omega_private_subnet",
            "aws_vpc.vpc_rec",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085d0394346fcdd1e",
            "route_table_id": "rtb-01549c9ff6889781f",
            "subnet_id": "subnet-0bd4015090da5cc6c"
          },
          "dependencies": [
            "aws_internet_gateway.rec_igw",
            "aws_route_table.omega_public_rt",
            "aws_subnet.omega_public_subnet",
            "aws_vpc.vpc_rec",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "omega_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:security-group/sg-00b8203f012e14a69",
            "description": "Groupe securite omega db",
            "egress": [],
            "id": "sg-00b8203f012e14a69",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow postgresdatabase traffic from only the web sg",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025689deb85d14d65"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "omega_db_sg",
            "name_prefix": "",
            "owner_id": "552239912540",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_db_omega"
            },
            "tags_all": {
              "Name": "sg_db_omega"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bc46b854a43b1a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.omega_web_sg",
            "aws_vpc.vpc_rec"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "omega_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:security-group/sg-025689deb85d14d65",
            "description": "Groupe securite omega",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025689deb85d14d65",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "omega_web_sg",
            "name_prefix": "",
            "owner_id": "552239912540",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_omega"
            },
            "tags_all": {
              "Name": "sg_omega"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bc46b854a43b1a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_rec"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "omega_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:subnet/subnet-07ee617325ff253d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ee617325ff253d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552239912540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "omega_private_subnet_0"
            },
            "tags_all": {
              "Name": "omega_private_subnet_0"
            },
            "vpc_id": "vpc-06bc46b854a43b1a8"
          },
          "dependencies": [
            "aws_vpc.vpc_rec",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:subnet/subnet-0e93b0ac86b06b6f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e93b0ac86b06b6f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552239912540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "omega_private_subnet_1"
            },
            "tags_all": {
              "Name": "omega_private_subnet_1"
            },
            "vpc_id": "vpc-06bc46b854a43b1a8"
          },
          "dependencies": [
            "aws_vpc.vpc_rec",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "omega_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:subnet/subnet-0bd4015090da5cc6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd4015090da5cc6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552239912540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "omega_public_subnet_0"
            },
            "tags_all": {
              "Name": "omega_public_subnet_0"
            },
            "vpc_id": "vpc-06bc46b854a43b1a8"
          },
          "dependencies": [
            "aws_vpc.vpc_rec",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_rec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:vpc/vpc-06bc46b854a43b1a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bdf7f3649510d89c",
            "default_route_table_id": "rtb-01b58e6556014e25e",
            "default_security_group_id": "sg-04645d59f080d134d",
            "dhcp_options_id": "dopt-01687b134227ed1a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06bc46b854a43b1a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b58e6556014e25e",
            "owner_id": "552239912540",
            "tags": {
              "Name": "recette"
            },
            "tags_all": {
              "Name": "recette"
            }
          }
        }
      ]
    }
  ]
}